# lint-gost-tex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.woodpecker/: pypi.yml
examples/: lint-gost-tex.toml
examples/dictionaries/: custom.txt  ru.txt
src/lint_gost_tex/: __init__.py  cli.py  config.py  context.py  document.py  issue.py  tex.py
src/lint_gost_tex/rules/: __init__.py  abbrev.py  base.py  captions.py  illustrations.py  images.py  lists.py  refs.py  spelling.py  styles.py  unicode_chars.py
