[tool.poetry]
name = "lint-gost-tex"
version = "0.1.1"
description = "LaTeX linter for GOST-styled documents."
authors = ["Lint GOST TeX contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lint_gost_tex", from = "src" }]
keywords = ["latex", "gost", "linter", "tex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Software Development :: Quality Assurance",
]
include = [
  "LICENSE",
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "examples/**",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.scripts]
lint-gost-tex = "lint_gost_tex.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
